# endee

./: README.md
endee_mcp/: .env.example  .gitignore  COMPLETION_SUMMARY.md  CONFIGURATION.md  README.md  TODO.md  TOOLS.md  docker-compose.yml  mcp_tool.md
endee_mcp/examples/: basic_usage.py
endee_mcp/mcp/: Dockerfile  README.md  pyproject.toml
endee_mcp/mcp/src/endee_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  types.py
endee_mcp/mcp/src/endee_mcp/embeddings/: __init__.py  base.py  local.py  openai.py
endee_mcp/mcp/src/endee_mcp/tools/: __init__.py  backup.py  batch.py  index.py  search.py  system.py  vector.py
endee_mcp/mcp/tests/: test_endee_mcp.py
src/: main.cpp
