[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endee-mcp"
version = "0.1.0"
description = "MCP server for Endee Vector Database"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Endee Labs"}
]
keywords = ["mcp", "vector-database", "embeddings", "search", "endee"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
local = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
all = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
endee-mcp = "endee_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/endee_mcp"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
